{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 189,
  "lineage": "71b0d6cb-b5fc-33f8-7851-ea19d84d908e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:security-group/sg-0d8303d9ae1de1d30",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8303d9ae1de1d30",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "637434821281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dlfasset-vl9hv7-sg"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-sg"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03b125d40c00985cf",
            "domain": "vpc",
            "id": "eipalloc-04f3c3c95b3a9aad7",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0bb1d1a39a428a587",
            "private_dns": "ip-10-4-12-215.eu-west-1.compute.internal",
            "private_ip": "10.4.12.215",
            "public_dns": "ec2-52-215-200-213.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.215.200.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dlfasset-vl9hv7-eu-west-1a"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:internet-gateway/igw-02c7d2b93ef6db445",
            "id": "igw-02c7d2b93ef6db445",
            "owner_id": "637434821281",
            "tags": {
              "Name": "dlfasset-vl9hv7"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f3c3c95b3a9aad7",
            "connectivity_type": "public",
            "id": "nat-059c71083f2c516f3",
            "network_interface_id": "eni-0bb1d1a39a428a587",
            "private_ip": "10.4.12.215",
            "public_ip": "52.215.200.213",
            "subnet_id": "subnet-06a876edc25c6ce5a",
            "tags": {
              "Name": "dlfasset-vl9hv7-eu-west-1a"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00ddb7604999741ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-059c71083f2c516f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ddb7604999741ae",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02c7d2b93ef6db445",
            "id": "r-rtb-05edfd42ba48925e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05edfd42ba48925e4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:route-table/rtb-00ddb7604999741ae",
            "id": "rtb-00ddb7604999741ae",
            "owner_id": "637434821281",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059c71083f2c516f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dlfasset-vl9hv7-private"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-private"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:route-table/rtb-05edfd42ba48925e4",
            "id": "rtb-05edfd42ba48925e4",
            "owner_id": "637434821281",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c7d2b93ef6db445",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dlfasset-vl9hv7-public"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-public"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da60a45c6b5164e4",
            "route_table_id": "rtb-00ddb7604999741ae",
            "subnet_id": "subnet-06bf971ad6f6b9048"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012766aef91b795f8",
            "route_table_id": "rtb-00ddb7604999741ae",
            "subnet_id": "subnet-0c5fdc47c1bff2518"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078383497cfa88bc1",
            "route_table_id": "rtb-05edfd42ba48925e4",
            "subnet_id": "subnet-06a876edc25c6ce5a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:subnet/subnet-06bf971ad6f6b9048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.4.32.0/19",
            "id": "subnet-06bf971ad6f6b9048",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637434821281",
            "tags": {
              "Name": "dlfasset-vl9hv7-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-private-eu-west-1a"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:subnet/subnet-0c5fdc47c1bff2518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.4.64.0/19",
            "id": "subnet-0c5fdc47c1bff2518",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637434821281",
            "tags": {
              "Name": "dlfasset-vl9hv7-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-private-eu-west-1b"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:subnet/subnet-06a876edc25c6ce5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.4.0.0/19",
            "id": "subnet-06a876edc25c6ce5a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637434821281",
            "tags": {
              "Name": "dlfasset-vl9hv7-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-public-eu-west-1a"
            },
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:vpc/vpc-032e7cd100a400791",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-030b1abd94643efb0",
            "default_route_table_id": "rtb-02f01f00be5491b5a",
            "default_security_group_id": "sg-0d8303d9ae1de1d30",
            "dhcp_options_id": "dopt-04def3ee9d8f5f638",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-032e7cd100a400791",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02f01f00be5491b5a",
            "owner_id": "637434821281",
            "tags": {
              "Name": "dlfasset-vl9hv7"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7"
            }
          },
          "dependencies": [
            "random_string.naming"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:vpc-endpoint/vpce-062ad85597fecf404",
            "dns_entry": [
              {
                "dns_name": "vpce-062ad85597fecf404-wk8o1f1b.kinesis.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-062ad85597fecf404-wk8o1f1b-eu-west-1b.kinesis.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-062ad85597fecf404-wk8o1f1b-eu-west-1a.kinesis.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z00937681GQFOGNUPR75P"
              },
              {
                "dns_name": "control-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z018156834PP77IV9FFII"
              },
              {
                "dns_name": "*.control-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z018156834PP77IV9FFII"
              },
              {
                "dns_name": "data-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z009385383YP9ZDXIGXX"
              },
              {
                "dns_name": "*.data-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z009385383YP9ZDXIGXX"
              }
            ],
            "id": "vpce-062ad85597fecf404",
            "network_interface_ids": [
              "eni-0095aea7e857253fb",
              "eni-0d9a0c36f7c0e50ca"
            ],
            "owner_id": "637434821281",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8303d9ae1de1d30"
            ],
            "service_name": "com.amazonaws.eu-west-1.kinesis-streams",
            "state": "available",
            "subnet_ids": [
              "subnet-06bf971ad6f6b9048",
              "subnet-0c5fdc47c1bff2518"
            ],
            "tags": {
              "Name": "dlfasset-vl9hv7-kinesis-vpc-endpoint"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-kinesis-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:vpc-endpoint/vpce-04a2a80d103870f6f",
            "cidr_blocks": [
              "18.34.240.0/22",
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-04a2a80d103870f6f",
            "owner_id": "637434821281",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00ddb7604999741ae",
              "rtb-05edfd42ba48925e4"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "dlfasset-vl9hv7-s3-vpc-endpoint"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637434821281:vpc-endpoint/vpce-07aaa6983ccf0baf0",
            "dns_entry": [
              {
                "dns_name": "vpce-07aaa6983ccf0baf0-2yjbkkdf.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07aaa6983ccf0baf0-2yjbkkdf-eu-west-1a.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07aaa6983ccf0baf0-2yjbkkdf-eu-west-1b.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sts.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z018158833YC336NXZQD4"
              }
            ],
            "id": "vpce-07aaa6983ccf0baf0",
            "network_interface_ids": [
              "eni-05333cdde61b4d777",
              "eni-07c99dfb6cb74986c"
            ],
            "owner_id": "637434821281",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8303d9ae1de1d30"
            ],
            "service_name": "com.amazonaws.eu-west-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-06bf971ad6f6b9048",
              "subnet-0c5fdc47c1bff2518"
            ],
            "tags": {
              "Name": "dlfasset-vl9hv7-sts-vpc-endpoint"
            },
            "tags_all": {
              "Name": "dlfasset-vl9hv7-sts-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-032e7cd100a400791"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}